--- a/LudumDare35.CSharp.csproj
+++ b/LudumDare35.CSharp.csproj
@@ -58,18 +58,15 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\DestroyerManager.cs" />
+    <Compile Include="Assets\SceneManager.cs" />
+    <Compile Include="Assets\Scripts\DestroyerManager.cs" />
+    <Compile Include="Assets\Scripts\LightManager.cs" />
+    <Compile Include="Assets\Scripts\LimitadorManager.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ScenarioManager.cs" />
   </ItemGroup>
