--- a/LudumDare35.CSharp.csproj
+++ b/LudumDare35.CSharp.csproj
@@ -69,6 +69,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\MenuManager.cs" />
     <Compile Include="Assets\Scripts\DestroyerManager.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\ItenManager.cs" />
